Score line handling

--- a/public/principal.html
+++ b/public/principal.html
@@ -13,7 +13,8 @@
 <body>
     <div class="container">
         <h1 class="center">Alura Typer</h1>
-        <p id="phrase" class="center">Frase contendo exatamente, nem uma a mais nem uma a menos do que quinze palavras</p>
+        <p id="phrase" class="center">Frase contendo exatamente, nem uma a mais nem uma a menos do que quinze palavras
+        </p>
 
         <ul class="information center">
             <li>
@@ -37,10 +38,35 @@
             <li><span class="wordsTyped">0</span> words</li>
             <li><span class="charactersTyped">0</span> characters</li>
         </ul>
+
+        <section class="scores">
+            <h5 class="center">Scores</h5>
+            <table class="centered bordered">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Nº of Words</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Kauã</td>
+                        <td>300</td>
+                        <td>
+                            <a href="" class="removeButton">
+                                <i class="small material-icons icones">delete</i>
+                            </a>
+                        </td>
+                    </tr>
+
+                </tbody>
+            </table>
+        </section>
     </div>
 
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/score.js"></script>
 </body>
 
 </html>
